# test_android_cpp

./: DEVELOPMENT_PLAN.md  build.gradle  gradle.properties  settings.gradle  setup_project.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: App.cpp  App.h  Button.cpp  Button.h  IconRenderer.cpp  IconRenderer.h  InputHandler.cpp  InputHandler.h  Layout.h  Renderer.cpp  Renderer.h  Style.h  TextRenderer.cpp  TextRenderer.h  WorkoutTracker.cpp  WorkoutTracker.h  android_native_app_glue.c  android_native_app_glue.h  main.cpp
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
